adjusted font headings to prevent border overflow. added background images and banner class.

--- a/FTC2301_naeem_Brandon-Bruyns_resume-main/CSS/stylesheet.css
+++ b/FTC2301_naeem_Brandon-Bruyns_resume-main/CSS/stylesheet.css
@@ -36,9 +36,16 @@ h1 {
   border-radius: 80%;
   border-width: 5px;
   border-style: solid;
+  top: 90px;
   padding: 16px 10px 16px 10px;
-  margin: 120px 5px 120px 0px;
+  margin: 20px 5px 30px 0px;
   position: relative;
+}
+h5{
+  margin: 30px 5px 30px 0px;
+  padding: 10px 10px 10px 10px;
+  position: relative;
+  top: 90px;
 }
 /*---------------------
                               top of the screen
@@ -82,12 +89,14 @@ h1 {
   right: auto;
 }
 .box2 {
-  padding: 20px 100px 5px 20px;
+  display: flex;
+  border: 1px 1px 1px 1px;
+  padding: 20px 10px 5px 20px;
   border: 5px black;
   flex-direction: column;
   flex-wrap: wrap;
-  flex: content;
-  flex: 1;
+  bottom: 0px;
+  line-height: 1px;
 }
 .box3 {
   padding-left: 180px;
@@ -99,17 +108,29 @@ h1 {
   flex: 2;
 }
 img{
+  transform: translateX(-160px);
   margin: 0px 0px 0px 0px;
-  padding: 0px 0px 0px 450px;
+  padding: 80px 10px 100px 450px;
+}
+.banner{
+  position: absolute;
+  padding: 0px 0px 0px 0px;
+  top: 400px;
+  right: 50px;
+  font-size: 100px;
+  font-style: italic;
 }
 .coverpage{
-  margin: 5px 5px 5px 5px;
-  padding: 1px 1px 1px 1px;
+  margin: 5px 5px 30px 5px;
+  padding: 1px 1px 50px 1px;
   background-color: #ff1111;
   border: 5px 5px 5px 5px;
   border-style: solid;
   border-width: 2px;
   border-radius: 30px;
+  background-image: url(5640557.jpg);
+  background-repeat: no-repeat;
+  background-position: top;
 }
 /*---------------------
                               middle of the screen
